--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -5,3 +5,10 @@
     max-width: 1200px;
     margin: 20px auto;
 }
+
+@media (max-width: 1240px) {
+    .container {
+        max-width: 700px; 
+        margin: 20px 20px;
+    }
+}
