--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -17,9 +17,16 @@
 }
 
 .title {
-  text-align: center;
-  font-size: ($base-size * 1.5);
-  margin: 0 0 ($base-size * 1.5) 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  h2 {
+    text-align: center;
+    font-size: ($base-size * 1.5);
+    margin: 0 0 ($base-size * 1.5) 0;
+  }
 }
 
 .icon::before {
