Add Favorite functions, removeList(), removeColumn() and removeCard()

--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -12,6 +12,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  button {
+    i {
+      color: red;
+    }
+  }
 }
 
 .title {
