--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,4 +10,13 @@
   display: flex;
   justify-content: space-between;
   font-weight: bold;
+
+  i {
+    transition: $transition;
+
+    &.isFavorite {
+      color: $color-warning;
+      transform: scale(1.2);
+    }
+  }
 }
