--- a/src/components/Lists/Lists.module.scss
+++ b/src/components/Lists/Lists.module.scss
@@ -3,6 +3,13 @@
 
 .lists {
   margin-top: $base-size * 2;
+
+  h3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .heading {
