--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,12 +11,20 @@
   justify-content: space-between;
   font-weight: bold;
 
+  .iconwraper {
+    width: ($base-size * 4);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
   i {
     transition: $transition;
+    font-size: $base-size * 1.5;
 
     &.isFavorite {
       color: $color-warning;
-      transform: scale(1.2);
+      transform: scale(1.5);
     }
   }
 }
