--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -27,6 +27,10 @@
     font-size: ($base-size * 1.5);
     margin: 0 0 ($base-size * 1.5) 0;
   }
+
+  i {
+    font-size: $base-size * 1.5;
+  }
 }
 
 .icon::before {
