--- a/src/components/Lists/Lists.module.scss
+++ b/src/components/Lists/Lists.module.scss
@@ -9,6 +9,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
+    i {
+      font-size: $base-size * 1.5;
+    }
   }
 }
 
