--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -30,6 +30,11 @@
 
   i {
     font-size: $base-size * 1.5;
+    transition: $transition;
+
+    &:hover {
+      color: $color-warning;
+    }
   }
 }
 
