--- a/src/components/Lists/Lists.module.scss
+++ b/src/components/Lists/Lists.module.scss
@@ -12,6 +12,11 @@
 
     i {
       font-size: $base-size * 1.5;
+      transition: $transition;
+
+      &:hover {
+        color: $color-warning;
+      }
     }
   }
 }
